--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="grid-img video-bg-tv">
                     <img src="images/tv.png" alt="A tv with Netflix on">
 
-                    <video src="images/video-tv-in-0819.m4v" controls preload="true" autoplay loop muted></video>
+                    <video src="Images/video-tv-in-0819.m4v" controls preload="true" autoplay loop muted></video>
 
                 </div>
             </div>
