--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
                 </div>
                 <div class="grid-img video-bg-tv">
-                    <img src="images/tv.png" alt="A tv with Netflix on">
+                    <img src="Images/tv.png" alt="A tv with Netflix on">
 
                     <video src="Images/video-tv-in-0819.m4v" controls preload="true" autoplay loop muted></video>
 
