--- a/Assets/Homepage/index.html
+++ b/Assets/Homepage/index.html
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="scrolling">
-                    <img class="arrow-prev" src="midia/arrow-prev.png" alt="" style="height: 100px;">
+                    <img class="arrow-prev" src="midia/arrow-prev.png" alt="">
                     <img class="arrow-next" src="midia/arrow-next.png" alt="">
                 </div>
             </section>
