--- a/Assets/Homepage/index.html
+++ b/Assets/Homepage/index.html
@@ -64,14 +64,34 @@
             <section class="category">
                 <h2 class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">Trending Now</h2>
                 <div class="slide">
-                    <img  class="slide-single" src="midia/emalta/greys.png" >
-                    <img  class="slide-single" src="midia/emalta/loki.jpg" >
-                    <img  class="slide-single" src="midia/emalta/friends.jpg" >
-                    <img  class="slide-single" src="midia/emalta/wandavision.jpg" >
-                    <img  class="slide-single" src="midia/emalta/tht.jpg" >
-                    <img  class="slide-single" src="midia/emalta/mrrobot.jpg" >
-                    <img  class="slide-single" src="midia/emalta/tvd.jpg" >
-                    <img  class="slide-single" src="midia/emalta/bigbang.jpg" >
+                    <img  class="slide-single" src="midia/photo/you.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/witcher.jpg" alt="">
+                    <img  class="slide-single" src="midia/emalta/friends.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/rag.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/jujutsu.webp" alt="">
+                    <!-- <img  class="slide-single" src="midia/photo/narco.jpg" alt="">
+                    <img  class="slide-single" src="midia/emalta/tvd.jpg" alt="">
+                    <img  class="slide-single" src="midia/emalta/bigbang.jpg" alt=""> -->
+                </div>
+
+            <div class="scrolling">
+                <img class="arrow-prev" src="midia/arrow-prev.png" alt="">
+                <img class="arrow-next" src="midia/arrow-next.png" alt="">
+            </div>
+                
+            </section>
+
+            <section class="category">
+                <h2 id="tv" class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">Movies</h2>
+                <div class="slide">
+                    <img  class="slide-single" src="midia/photo/extract.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/bullet.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/heart.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/inception.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/f9.webp" alt="">
+                    <!-- <img  class="slide-single" src="midia/photo/troll.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/adam.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/lust.jpg" alt=""> -->
                 </div>
 
                 <div class="scrolling">
@@ -81,35 +101,16 @@
             </section>
 
             <section class="category">
-                <h2 id="tv" class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">TV Shows</h2>
+                <h2 id="movie" class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">TV Shows</h2>
                 <div class="slide">
-                    <img  class="slide-single" src="midia/hbo/west.png" alt="">
-                    <img  class="slide-single" src="midia/hbo/euphoria.jpg" alt="">
-                    <img  class="slide-single" src="midia/hbo/got.jpg" alt="">
-                    <img  class="slide-single" src="midia/hbo/succ.jpg" alt="">
-                    <img  class="slide-single" src="midia/hbo/bll.jpg" alt="">
-                    <img  class="slide-single" src="midia/hbo/cher.jpg" alt="">
-                    <img  class="slide-single" src="midia/hbo/Gossip.jpg" alt="">
-                    <img  class="slide-single" src="midia/hbo/watch.jpeg" alt="">
-                </div>
-
-                <div class="scrolling">
-                    <img class="arrow-prev" src="midia/arrow-prev.png" alt="">
-                    <img class="arrow-next" src="midia/arrow-next.png" alt="">
-                </div>
-            </section>
-
-            <section class="category">
-                <h2 id="movie" class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">Movies</h2>
-                <div class="slide">
-                    <img  class="slide-single" src="midia/netflix/ldp.jpg" alt="">
-                    <img  class="slide-single" src="midia/netflix/tua.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/money.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/luci.jpg" alt="">
                     <img  class="slide-single" src="midia/netflix/st.jpg" alt="">
                     <img  class="slide-single" src="midia/netflix/se.jpg" alt="">
-                    <img  class="slide-single" src="midia/netflix/emily.jpeg" alt="">
-                    <img  class="slide-single" src="midia/netflix/tqg.jpg" alt="">
-                    <img  class="slide-single" src="midia/netflix/thohh.jpg" alt="">
-                    <img  class="slide-single" src="midia/netflix/sense.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/peaky.jpg" alt="">
+                    <!-- <img  class="slide-single" src="midia/netflix/emily.jpeg" alt="">
+                    <img  class="slide-single" src="midia/netflix/tua.jpg" alt="">
+                    <img  class="slide-single" src="midia/netflix/sense.jpg" alt=""> -->
                 </div>
 
                 <div class="scrolling">
@@ -121,14 +122,14 @@
             <section class="category">
                 <h2 id="watchlist" class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">WatchList</h2>
                 <div class="slide">
-                    <img  class="slide-single" src="midia/prime/tb.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/fleabag.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/hann.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/ml.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/Hunters.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/them.jpg.webp" alt="">
-                    <img  class="slide-single" src="midia/prime/upload.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/do.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/bb.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/walking.webp    " alt="">
+                    <img  class="slide-single" src="midia/photo/dark.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/13.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/sandman.jpg" alt="">
+                    <!-- <img  class="slide-single" src="midia/photo/nhie.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/locke.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/squid.jpg" alt=""> -->
                 </div>
 
                 <div class="scrolling">
@@ -140,14 +141,14 @@
             <section class="category">
                 <h2 class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">Anime</h2>
                 <div class="slide">
-                    <img  class="slide-single" src="midia/prime/tb.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/fleabag.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/hann.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/ml.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/Hunters.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/them.jpg.webp" alt="">
-                    <img  class="slide-single" src="midia/prime/upload.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/do.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/demon.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/death note.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/tokyo.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/cyber.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/naruto.webp" alt="">
+                    <!-- <img  class="slide-single" src="midia/photo/chain.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/tokyore.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/vinland.webp" alt=""> -->
                 </div>
 
                 <div class="scrolling">
@@ -159,14 +160,14 @@
             <section class="category">
                 <h2 class="container" style="font-size: 25px;font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;">Critically Acclaimed</h2>
                 <div class="slide">
-                    <img  class="slide-single" src="midia/prime/tb.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/fleabag.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/hann.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/ml.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/Hunters.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/them.jpg.webp" alt="">
-                    <img  class="slide-single" src="midia/prime/upload.jpg" alt="">
-                    <img  class="slide-single" src="midia/prime/do.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/ozark.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/crown.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/shutter.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/office.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/squid.jpg" alt="">
+                    <!-- <img  class="slide-single" src="midia/photo/bb.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/umbrella.jpg" alt="">
+                    <img  class="slide-single" src="midia/photo/locke.jpg" alt=""> -->
                 </div>
 
                 <div class="scrolling">
