--- a/Assets/Homepage/index.html
+++ b/Assets/Homepage/index.html
@@ -162,7 +162,7 @@
                 <div class="slide">
                     <img  class="slide-single" src="midia/photo/ozark.jpg" alt="">
                     <img  class="slide-single" src="midia/photo/crown.jpg" alt="">
-                    <img  class="slide-single" src="midia/photo/shutter.webp" alt="">
+                    <img  class="slide-single" src="midia/photo/umbrella.jpg" alt="">
                     <img  class="slide-single" src="midia/photo/office.webp" alt="">
                     <img  class="slide-single" src="midia/photo/squid.jpg" alt="">
                     <!-- <img  class="slide-single" src="midia/photo/bb.webp" alt="">
